# ibkr-mcp

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
notebook/: test.ipynb
src/ibkr_mcp/: __init__.py  __main__.py  server.py  tools.py
src/ibkr_mcp/common/: __init__.py  greeks.py  option_data.py  playbooks.py  positions.py  rules.py
src/ibkr_mcp/services/: __init__.py  account_service.py  base.py  news_service.py  option_data_service.py  risk_service.py
src/ibkr_mcp/strategies/: __init__.py  base.py  strategy_covered_call.py  strategy_iron_condor.py  strategy_pmcc.py  strategy_put_credit_spread.py  strategy_vertical_spread.py
src/ibkr_mcp/tools/: __init__.py  portfolio.py
src/ibkr_mcp/tools/common/: __init__.py  greeks.py  positions.py
