[project]
name = "ibkr-mcp"
version = "0.1.13"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ib-async>=2.0.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.21.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ibkr_mcp", "ibkr_mcp.common"]

[tool.setuptools.package-dir]
"" = "src"
